--- a/Spring/Photostagram/src/main/resources/static/css/style.css
+++ b/Spring/Photostagram/src/main/resources/static/css/style.css
@@ -177,7 +177,7 @@ body {
 }
 .contents .comment_container .comment {
   display: inline-block;
-  flex-direction: column;
+  margin-bottom: 10px;
   font-size: 14px;
 }
 
