--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -629,6 +629,10 @@ html {height: 100%;}
         height: 25px;
       }
 
+      .noticeTime{
+        color: #8e8e8e;
+      }
+
 
       /*logout*/
       .more_logout{
