--- a/Spring/Photostagram/src/main/resources/templates/member/registerLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/registerLayout.html
@@ -6,17 +6,10 @@
 <th:block layout:fragment="main">
 <script>
     $(function(){
-
-        alert('here!');
-
-        $('.main-content').load('register.html', function(){
-            alert('load!!!');
+        $('.main-content').load('/Photostagram/member/registerForm', function(){
+            //alert('load!!!');
         });
-
-
     });
-
-
 </script>
 <main class="member">
     <div class="container">
