--- a/Spring/Photostagram/src/main/resources/templates/board/post.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/post.html
@@ -5,7 +5,7 @@
 <th:block layout:fragment="main">
     <div id="wrapper">
         <article id="post">
-            <section class="picture"><img th:src="|@{/}thumb/${m.value}" alt="picture"></section>
+            <section class="picture" ><img th:src="|@{/}thumb/${article.imageVO.thumb}" alt="picture"></section>
             <section class="contents">
                 <nav>
                     <div id="profile">
