--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -313,5 +313,37 @@
     .secondModal > ul > li > a {font-size: 14px; font-weight: bold;}
     .secondModal > ul > li:nth-child(1) > a {color: red;}
 
+    .cancelModalFrame {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background-color: rgba(0,0,0,0.4);
+      -ms-overflow-style: none;
+    }
+    .cancelModalFrame::-webkit-scrollbar {display: none;}
+
+     .cancelModal {
+      background-color: #fefefe;
+      margin: 15% auto;
+      border: 1px solid #888;
+      width: 400px;
+      border-radius: 10px;
+      box-sizing: border-box;
+    }
+    .cancelModal > div {display: block; width:400px; height: 150px; position: relative; text-align: center; padding: 20px; box-sizing: border-box;}
+    .cancelModal > div > img {display: inline-block; width: 75px; height: auto;}
+    .cancelModal > div > h1 {text-align: center; font-size: 14px; margin-top: 5px;}
+    .cancelModal > div > h1 > span {font-weight: bold;}
+
+    .cancelModal > ul {text-align: center;}
+    .cancelModal > ul > li {text-align: center; border-top:1px solid #e9e9e9; display: block; height: 50px; line-height: 50px; box-sizing: border-box;}
+    .cancelModal > ul > li > a {font-size: 14px; font-weight: bold;}
+    .cancelModal > ul > li:nth-child(1) > a {color: red;}
+
 
 
