--- a/Spring/Photostagram/src/main/resources/templates/profile/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/index.html
@@ -19,10 +19,10 @@
                       </th:block>
                       <th:block th:unless="${#strings.equals(myName, username)}">
                           <th:block th:if="${not #strings.isEmpty(member.profileImg)}">
-                              <img th:src="|@{/}thumb/${member.profileImg}" alt="profile" id="profilePhoto"/>
+                              <img th:src="|@{/}thumb/${member.profileImg}" alt="profile" id="profilePhoto" class="notAddProf"/>
                           </th:block>
                           <th:block th:unless="${not #strings.isEmpty(member.profileImg)}">
-                              <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile" id="profilePhoto"/>
+                              <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile" id="profilePhoto" class="notAddProf" />
                           </th:block>
                       </th:block>
                           <span class="profileSpinner"></span>
@@ -48,12 +48,26 @@
                           <li>
                               게시물<span>[[${post}]]</span>
                           </li>
-                          <li>
-                              <a href="#" id="followerModal">팔로워<span>[[${myFollower}]]</span></a>
-                          </li>
-                          <li>
-                              <a href="#" id="followingModal">팔로잉<span>[[${myFollowing}]]</span></a>
-                          </li>
+                          <th:block th:if="${myFollower == 0}">
+                              <li>
+                                  <a href="#">팔로워<span>[[${myFollower}]]</span></a>
+                              </li>
+                          </th:block>
+                          <th:block th:unless="${myFollower == 0}">
+                              <li>
+                                  <a href="#" id="followerModal">팔로워<span>[[${myFollower}]]</span></a>
+                              </li>
+                          </th:block>
+                          <th:block th:if="${myFollowing == 0}">
+                              <li>
+                                  <a href="#">팔로잉<span>[[${myFollowing}]]</span></a>
+                              </li>
+                          </th:block>
+                          <th:block th:unless="${myFollowing == 0}">
+                              <li>
+                                  <a href="#" id="followingModal">팔로잉<span>[[${myFollowing}]]</span></a>
+                              </li>
+                          </th:block>
                       </ul>
                       <p class="pAbout">
                           <span class="notice">
@@ -234,11 +248,11 @@
                     </ul>
                 </div>
             </div>
-            <div id="followingCancel" class="pModal">
-                <div class="pContents">
+            <div id="followingCancel" class="cancelModalFrame">
+                <div class="cancelModal">
                     <div>
                         <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}">
-                        <h1><span>gildong</span>님의 팔로우를 취소하시겠어요?</h1>
+                        <h1><span id="modalCancelName">name</span>님의 팔로우를 취소하시겠어요?</h1>
                     </div>
                     <ul>
                         <li><a href="#" class="pClose followingCancel">팔로우 취소</a></li>
@@ -250,18 +264,19 @@
     </th:block>
 </html>
 <script>
-     $(function(){
-      let modal = $('#followerDelete');
-      let btn = $('.userSelect');
+    $(function(){
+      let modal = $('#followingCancel');
+      let btn = $('.userFollowing');
+      let close = $('.pClose');
 
       btn.click(function(e){
         modal.show();
         let tag = $(this);
         let userName = tag.attr('data-value');
-        let deleteName = $("#modalDeleteName");
-        deleteName.html(userName);
+        let cancelName = $("#modalCancelName");
+        cancelName.html(userName);
 
-        $('.followerDelete').click(function(e){
+        $('.followingCancel').click(function(e){
             e.preventDefault();
             tag.children('.spinner').show();
             modal.hide();
@@ -271,13 +286,13 @@
                     url: '/Photostagram/profile/follow',
                     type: 'post',
                     dataType: 'json',
-                    data: {'userName':userName, 'type':'myDelete'},
+                    data: {'userName':userName, 'type':'delete'},
                     success: function(data){
                         console.log('here1');
                         if(data.result > 0){
-                            console.log('here2');
+                            tag.parent().children('.userFollowing').hide();
                             tag.children('.spinner').hide();
-                            tag.text('삭제됨').css('font-weight', 'bold');
+                            tag.parent().children('.userFollow').show();
                         }
                     }
                 });
@@ -291,5 +306,10 @@
           modal.style.display = "none";
         }
       }
+
+      close.click (function(e){
+        modal.hide();
+      });
+
     });
 </script>
