--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -30,9 +30,22 @@
         margin-right:100px;
         width: 200px;
     }
-    #pro > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
-    #pro > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
-    #pro > section > .myProfile > .proPhoto > div > a > img {width: 100%; height: 100%; object-fit: cover;}
+    #pro > section > .myProfile > .proPhoto > div {
+        width: 150px;
+        height: 150px;
+        border-radius: 70%;
+        overflow: hidden;
+    }
+    #pro > section > .myProfile > .proPhoto > div > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    #pro > section > .myProfile > .proPhoto > div > a > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
     #pro > section > .myProfile > .detail {float:left; width:500px;}
     #pro > section > .myProfile > .detail > .pTop {
         display: block;
@@ -81,7 +94,11 @@
         margin-left: 5px;
     }
     #pro > section > .myProfile > .detail > .pMiddle > li > a {font-size:15px;}
-    #pro > section > .myProfile > .detail > .pMiddle > li > a > span {font-size:16px; font-weight:bold; margin-left:5px;}
+    #pro > section > .myProfile > .detail > .pMiddle > li > a > span {
+        font-size:16px;
+        font-weight:bold;
+        margin-left:5px;
+    }
 
     #pro > section > .myProfile > .detail > .pAbout > .notice {font-size: 15px;}
 
@@ -137,12 +154,42 @@
     border-radius: 10px;
   }
 
-  .fContents > #fTop {margin-left: 135px; width:55px; position: relative; text-align: center;padding: 20px;}
-  .fContents > #fTop > img {display: inline-block; width: 55px; height: auto; vertical-align: middle;}
-  .fContents > #fTop > span {display: inline-block; width: 55px; height: auto; vertical-align: middle; font-size: 14px; font-weight: bold; margin-top: 5px;}
+  .fContents > #fTop {
+    margin-left: 135px;
+    width:55px;
+    position: relative;
+    text-align: center;
+    padding: 20px;
+  }
+  .fContents > #fTop > img {
+    display: inline-block;
+    width: 55px;
+    height: auto;
+    vertical-align: middle;
+   }
+  .fContents > #fTop > span {
+    display: inline-block;
+    width: 55px;
+    height: auto;
+    vertical-align: middle;
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: 5px;
+   }
   .fContents > #fBottom {border-top: 1px solid #e9e9e9;}
-  .fContents > #fBottom > li {display: block; height: 40px; box-sizing: border-box;}
-  .fContents > #fBottom > li > a {top: 14px; position: relative; float: left; display: block; width: 350px; font-size: 14px; }
+  .fContents > #fBottom > li {
+    display: block;
+    height: 40px;
+    box-sizing: border-box;
+   }
+  .fContents > #fBottom > li > a {
+    top: 14px;
+    position: relative;
+    float: left;
+    display: block;
+    width: 350px;
+    font-size: 14px;
+   }
   .fContents > #fBottom > li > a > span {float:left; font-size:14px;}
   .fContents > #fBottom > li > a > i {float: right;}
 
@@ -188,15 +235,60 @@
     border-bottom: 1px solid #e9e9e9;
     font-weight: bold;
   }
-  .fList > li {width: 350px; height: 50px; display: inline-block; padding: 5px;}
-  .fList > li > a:nth-child(1) {float:left; display: block; width: 280px; height: 45px; line-height: 45px;}
-    .fList > li > a:nth-child(3) {width: 55px; height: 40px; line-height: 40px; vertical-align: middle;}
-  .fList > li > a:nth-child(2) {width: 55px; height: 40px; line-height: 40px; vertical-align: middle;}
-  .fList > li > a > h1 {height: 45px; float: left; font-size: 14px; margin-left: 10px; vertical-align: middle; line-height: 45px;}
-  .fList > li > a > div {float: left; width: 45px; height: 45px; border-radius: 70%; overflow: hidden;}
-  .fList > li > a > div > img {width: 100%; height: 100%; line-height: 55px; vertical-align: middle; object-fit: cover;}
+  .fList > li {
+    width: 350px;
+    height: 50px;
+    display: inline-block;
+    padding: 5px;
+   }
+  .fList > li > a:nth-child(1) {
+    float:left;
+    display: block;
+    width: 280px;
+    height: 45px;
+    line-height: 45px;
+   }
+  .fList > li > a:nth-child(3) {
+    width: 55px;
+    height: 40px;
+    line-height: 40px;
+    vertical-align: middle;
+   }
+  .fList > li > a:nth-child(2) {
+    width: 55px;
+    height: 40px;
+    line-height: 40px;
+    vertical-align: middle;
+  }
+  .fList > li > a > h1 {
+    height: 45px;
+    float: left;
+    font-size: 14px;
+    margin-left: 10px;
+    vertical-align: middle;
+    line-height: 45px;
+   }
+  .fList > li > a > div {
+    float: left;
+    width: 45px;
+    height: 45px;
+    border-radius: 70%;
+    overflow: hidden;
+   }
+  .fList > li > a > div > img {
+    width: 100%;
+    height: 100%;
+    line-height: 55px;
+    vertical-align: middle;
+    object-fit: cover;
+   }
 
-  .aFloatRight {float: right; background: #32a4ff; border-radius: 5px; text-align: center;}
+  .aFloatRight {
+    float: right;
+    background: #32a4ff;
+    border-radius: 5px;
+    text-align: center;
+  }
   .aFloatRight > span {font-weight: bold;}
   .userFollow {
     position: relative;
@@ -242,10 +334,25 @@
       border-radius: 10px;
     }
 
-    .photoContents > #photoTop {height:80px; position: relative; text-align: center; line-height: 90px; vertical-align: middle; }
+    .photoContents > #photoTop {
+        height:80px;
+        position: relative;
+        text-align: center;
+        line-height: 90px;
+        vertical-align: middle;
+     }
     .photoContents > #photoTop > span {font-size: 20px;}
     .photoContents > #photoBottom {border-top: 1px solid #e9e9e9;}
-    .photoContents > #photoBottom > li {display: block; height: 40px; box-sizing: border-box; font-size: 14px; text-align: center; line-height: 40px; vertical-align: middle; font-weight: bold;}
+    .photoContents > #photoBottom > li {
+        display: block;
+        height: 40px;
+        box-sizing: border-box;
+        font-size: 14px;
+        text-align: center;
+        line-height: 40px;
+        vertical-align: middle;
+        font-weight: bold;
+     }
     .photoContents > #photoBottom > .addProf {color: #32a4ff; border-bottom: 1px solid #e9e9e9;}
     .photoContents > #photoBottom > .deleteProf {color: red; border-bottom: 1px solid #e9e9e9;}
 
@@ -303,13 +410,43 @@
     }
     .secondModalFrame::-webkit-scrollbar {display: none;}
 
-    .secondModal > div {display: block; width:400px; height: 200px; position: relative; text-align: center; padding: 20px; box-sizing: border-box;}
-    .secondModal > div > img {display: inline-block; width: 75px; height: auto;}
-    .secondModal > div > h1 {text-align: center; font-size: 14px; margin-top: 5px;}
+    .secondModal > div {
+        display: block;
+        width:400px;
+        height: 200px;
+        position: relative;
+        text-align: center;
+        padding: 20px;
+        box-sizing: border-box;
+     }
+    .secondModal > div > div {
+        display: inline-block;
+        width: 75px;
+        height: 75px;
+        overflow: hidden;
+        border-radius: 70%;
+     }
+    .secondModal > div > div > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+     }
+    .secondModal > div > h1 {
+        text-align: center;
+        font-size: 14px;
+        margin-top: 5px;
+     }
     .secondModal > div > h1 > span {font-weight: bold; font-size: 15px;}
 
     .secondModal > ul {text-align: center;}
-    .secondModal > ul > li {text-align: center; border-top:1px solid #e9e9e9; display: block; height: 50px; line-height: 50px; box-sizing: border-box;}
+    .secondModal > ul > li {
+        text-align: center;
+        border-top:1px solid #e9e9e9;
+        display: block;
+        height: 50px;
+        line-height: 50px;
+        box-sizing: border-box;
+     }
     .secondModal > ul > li > a {font-size: 14px; font-weight: bold;}
     .secondModal > ul > li:nth-child(1) > a {color: red;}
 
@@ -335,15 +472,85 @@
       border-radius: 10px;
       box-sizing: border-box;
     }
-    .cancelModal > div {display: block; width:400px; height: 150px; position: relative; text-align: center; padding: 20px; box-sizing: border-box;}
-    .cancelModal > div > img {display: inline-block; width: 75px; height: auto;}
-    .cancelModal > div > h1 {text-align: center; font-size: 14px; margin-top: 5px;}
+    .cancelModal > div {
+        display: block;
+        width:400px;
+        height: 150px;
+        position: relative;
+        text-align: center;
+        padding: 20px;
+        box-sizing: border-box;
+     }
+    .cancelModal > div > div {
+        display: inline-block;
+        width: 75px;
+        height: 75px;
+        overflow: hidden;
+        border-radius: 70%;
+     }
+    .cancelModal > div > div > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+     }
+    .cancelModal > div > h1 {
+        text-align: center;
+        font-size: 14px;
+        margin-top: 5px;
+     }
     .cancelModal > div > h1 > span {font-weight: bold;}
 
     .cancelModal > ul {text-align: center;}
-    .cancelModal > ul > li {text-align: center; border-top:1px solid #e9e9e9; display: block; height: 50px; line-height: 50px; box-sizing: border-box;}
+    .cancelModal > ul > li {
+        text-align: center;
+        border-top:1px solid #e9e9e9;
+        display: block;
+        height: 50px;
+        line-height: 50px;
+        box-sizing: border-box;
+     }
     .cancelModal > ul > li > a {font-size: 14px; font-weight: bold;}
     .cancelModal > ul > li:nth-child(1) > a {color: red;}
+
+    #settingIcon {
+        left: 10px;
+        position: relative;
+        top: 8px;
+    }
+
+    .settingModalFrame {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background-color: rgba(0,0,0,0.4);
+      -ms-overflow-style: none;
+    }
+    .settingModalFrame::-webkit-scrollbar {display: none;}
+
+     .settingModal {
+      background-color: #fefefe;
+      margin: 15% auto;
+      border: 1px solid #888;
+      width: 400px;
+      border-radius: 10px;
+      box-sizing: border-box;
+    }
+
+    .settingModal > ul {text-align: center;}
+    .settingModal > ul > li {
+        text-align: center;
+        border-top:1px solid #e9e9e9;
+        display: block;
+        height: 50px;
+        line-height: 50px;
+        box-sizing: border-box;
+     }
+    .settingModal > ul > li > a {font-size: 14px; font-weight: bold;}
 
 
 
