--- a/Spring/Photostagram/src/main/resources/templates/profile/modify.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/modify.html
@@ -119,7 +119,7 @@
                   </table>
                   <input type="submit" value="제출">
               </form>
-              <a href="#">일시적으로 내 계정 비활성화하기</a>
+              <a href="#">탈퇴하기</a>
           </div>
         </div>
         <div id="photoModal" class="photoModal">
