--- a/Spring/Photostagram/src/main/resources/templates/layout/chatLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/chatLayout.html
@@ -33,4 +33,6 @@
     <!--/*** aside modal ***/-->
     <th:block th:replace="~{fragments/profile/_modal::modalFragment}"></th:block>
     <th:block layout:fragment="script"></th:block>
+    <!--/***chat modal***/-->
+    <th:block th:replace="~{fragments/_chatModal::chatModalFragment}"></th:block>
 </html>
