--- a/Spring/Photostagram/src/main/resources/static/css/chat.css
+++ b/Spring/Photostagram/src/main/resources/static/css/chat.css
@@ -217,6 +217,27 @@ li > img{
     font-size: 15px;
 }
 
+input[type='checkbox']{
+    display:none;
+}
+input[type='checkbox']+label{
+    display:inline-block;
+    width:18px;
+    height:18px;
+    border-radius: 10px;
+    border: 1px solid #292929;
+    position: relative;
+}
+input[id="userCheck"]:checked + label::after{
+        content:'✔';
+        font-size: 15px;
+        width: 18px;
+        height: 18px;
+        text-align: center;
+        position: absolute;
+        left: 0;
+        top:0;
+      }
 /* 모달 받는 사람 검색창 */
 .new-body1{
     align-items: stretch;
