--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -90,7 +90,13 @@
                 <div class="profile_img">
 
                   <!------------- 게시글 상단 프로필사진입니다 --------------------->
-                  <a href="#"><img src="./img/thumb.jpeg" alt="프로필이미지"/></a>
+                  <th:block th:if="${#strings.isEmpty(article.memberVO.profileImg)}">
+                    <a href="#"><img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="프로필이미지"/></a>
+                  </th:block>
+
+                  <a href="#"><img th:src="|@{/}thumb/${article.memberVO.profileImg}" alt="프로필이미지"/></a>
+
+
 
                 </div>
                 <div class="user_name">
@@ -194,7 +200,7 @@
 
             </div>
             <div class="commentMore">
-              <input type="button" class="commentAll" value="댓글 82개 모두 보기"/>
+              댓글 <span id="comment-count">12</span>개 모두 보기
             </div>
 
             <!----- 댓글 작성 폼 ------->
