20230315 비밀번호 찾기

--- a/Spring/Photostagram/src/main/resources/static/css/member.css
+++ b/Spring/Photostagram/src/main/resources/static/css/member.css
@@ -587,3 +587,15 @@ option {
 .check-txt.on {
     display: block;
 }
+.codeDiv {
+    display: none;
+}
+.codeDiv.on {
+    display: block;
+}
+.emailDiv {
+    display: block;
+}
+.emailDiv.on {
+    display: none;
+}
