--- a/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
@@ -16,7 +16,7 @@
                 <div class="modal_image_upload">
                     <button id="fileButton">
                         <label for="file_upload">컴퓨터에서 선택</label>
-                        <input type="file" id="file_upload" accept="image/*" required multiple/>
+                        <input type="file" id="file_upload" accept="image/*, video/*" required multiple/>
                     </button>
                 </div>
             </div>
