--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -209,7 +209,7 @@
               <input type="hidden" name="postNo" th:value="${article.no}">
               <input type="hidden" name="userNo" th:value="${user.no}">
               <input type="text" name="commentText" class="commentText" placeholder="댓글달기..." />
-              <a href="#" class="upload_btn m_text">게시</a>
+              <button href="#" class="upload_btn m_text" disabled>게시</button>
             </div>
           </article>
           </th:block>
