--- a/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_modal.html
@@ -36,6 +36,7 @@
                     <div id="input_image" class="modal_image_upload_content">
                         <button class="beforeBtn" id="beforeBtn"><img src="./img/arrowL.png" alt=""></button>
                         <button class="afterBtn" id="afterBtn"><img src="./img/arrowR_8x13.png" alt=""></button>
+                        <video autoplay muted loop src="path/to/video.mp4" type="video/mp4"></video>
                     </div>
                     <div class="modal_content_write">
                         <div class="feed_name">
@@ -75,6 +76,9 @@
                     <div id="input_image_drop" class="modal_image_upload_content">
                         <button class="beforeBtn" id="beforeBtnDrop"><img src="./img/arrowL.png" alt=""></button>
                         <button class="afterBtn" id="afterBtnDrop"><img src="./img/arrowR_8x13.png" alt=""></button>
+                        <video autoplay muted loop>
+                            <source src="path/to/video.mp4" type="video/mp4">
+                        </video>
                     </div>
                     <div class="modal_content_write">
                         <div class="feed_name">
