--- a/Spring/Photostagram/src/main/resources/templates/profile/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/index.html
@@ -274,7 +274,7 @@
             <div id="sModal" class="settingModalFrame">
                 <div class="settingModal">
                     <ul>
-                        <li><a>비밀번호 변경</a></li>
+                        <li><a th:href="@{/profile/passChange}">비밀번호 변경</a></li>
                         <li><a th:href="@{/member/logout}">로그아웃</a></li>
                         <li><a href="#" class="pClose">취소</a></li>
                     </ul>
