--- a/Spring/Photostagram/src/main/resources/templates/profile/modify.html
+++ b/Spring/Photostagram/src/main/resources/templates/profile/modify.html
@@ -117,7 +117,7 @@
                           */-->
                       </tbody>
                   </table>
-                  <input type="submit" value="제출">
+                  <input id="myModify" type="submit" value="제출">
               </form>
               <a href="#">탈퇴하기</a>
           </div>
