--- a/Spring/Photostagram/src/main/resources/static/css/profileModify.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profileModify.css
@@ -1,3 +1,6 @@
+
+    /*** 공통 ***/
+
   * {
     margin: 0;
     padding: 0;
@@ -13,6 +16,9 @@
         margin-left: 500px;
         margin-top: 50px;
     }
+
+
+    /*** profileModify ***/
 
     #modi > #myInfo {
         width: 800px;
@@ -45,6 +51,63 @@
     #myInfo > form > table > tbody > tr:nth-child(4) > td:nth-child(1) {position:relative; display: block; top: 20px;}
     #myInfo > form > table > tbody > tr:nth-child(9) > td:nth-child(2) > span {float: left;}
     #myInfo > form > table > tbody > tr:nth-child(9) > td:nth-child(2) {display: block;}
-    #myInfo > form > input {margin-left:400px; margin-top:50px; width: 50px; height: 30px; border: none; background: #32a4ff; color: #fff; font-weight: bold;}
     #myInfo > a {margin-left:500px; font-weight: bold; color: #32a4ff; padding: 10px; font-size: 14px;}
     #check {float: left;}
+
+    #myModify {
+        margin-left:400px;
+        margin-top:50px;
+        width: 50px;
+        height: 30px;
+        border: none;
+        background: #32a4ff;
+        color: #fff;
+        font-weight: bold;
+    }
+
+
+    /*** passChange ***/
+
+    #modi > #myPass {
+        width: 800px;
+        height: 500px;
+        border: 1px solid #e9e9e9;
+        background: white;
+        margin-bottom: 100px;
+    }
+    #myPass > div {margin-left: 100px; margin-top:30px; width:400px; height:80px; top: 20px; position: relative; left: 15px;}
+    /***
+    #pro > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
+    #pro > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
+    ***/
+    #myPass > div > div:nth-child(1) {float: left; width: 45px; height:45px; border-radius: 70%; overflow:hidden;}
+    #myPass > div > div > img {width: 100%; height: 100%; object-fit: cover;}
+    #myPass > div > div {margin-left: 20px; margin-top:5px; float: left; width: 150px; position: relative;}
+    #myPass > div > div > span {float: left; font-size: 18px;}
+    #myPass > div > div > a {float: left; color: #32a4ff; font-weight: bold; font-size: 15px;}
+    #myPass > form {margin-left: 10px; border-collapse:collapse;}
+    #myPass > form > table > tbody > tr {position: relative;}
+    #myPass > form > table > tbody > tr > td:nth-child(1) {width: 150px; text-align:right;}
+    #myPass > form > table > tbody > tr > td:nth-child(2) {padding: 15px;}
+    #myPass > form > table > tbody > tr > td:nth-child(2) > input {width: 350px; height: 35px; border: 1px solid #dcdcdc; font-size: 15px;}
+    #myPass > form > table > tbody > tr > td:nth-child(2) > textarea {width: 350px; height: 50px; border: 1px solid #dcdcdc; font-size: 15px; resize: none;}
+    #myPass > form > table > tbody > tr > td:nth-child(2) > #check {width: 15px; height: 15px;}
+    #myPass > form > table > tbody > tr > #private {color: #808080; font-size: 12px; width: 350px;}
+    #myPass > form > table > tbody > tr > td:nth-child(1) > span {font-weight: bold; font-size: 17px;}
+    #myPass > form > table > tbody > tr > td:nth-child(2) > span {display: block; color: #808080; width: 350px; font-size: 12px; margin-top: 10px;}
+    #myPass > form > table > tbody > tr:nth-child(1) > td:nth-child(1) {position:relative; display: block; top: 20px;}
+    #myPass > form > table > tbody > tr:nth-child(4) > td:nth-child(1) {position:relative; display: block; top: 20px;}
+    #myPass > form > table > tbody > tr:nth-child(9) > td:nth-child(2) > span {float: left;}
+    #myPass > form > table > tbody > tr:nth-child(9) > td:nth-child(2) {display: block;}
+    #myPass > a {margin-left:500px; font-weight: bold; color: #32a4ff; padding: 10px; font-size: 14px;}
+
+    #passChange {
+        margin-left: 300px;
+        margin-top: 50px;
+        width: 100px;
+        height: 30px;
+        border: none;
+        background: #32a4ff;
+        color: #fff;
+        font-weight: bold;
+    }
