2023/03/16 비밀번호 찾기 구현 중

--- a/Spring/Photostagram/src/main/resources/templates/member/checkPass.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/checkPass.html
@@ -35,6 +35,8 @@
             </div>
             <div class="checking">
                 <div class="check-txt nEx">존재하지 않는 회원입니다.</div>
+                <div class="check-txt nId">아이디를 입력하여주세요.</div>
+                <div class="check-txt id">아이디 형식이 올바르지않습니다.</div>
                 <div class="check-txt email">이메일 형식이 올바르지않습니다.</div>
                 <div class="check-txt name">이름 형식이 올바르지않습니다.</div>
                 <div class="check-txt nName">이름을 입력하여주세요.</div>
@@ -42,7 +44,7 @@
             </div>
             <div class="code">
                 <button type="submit" class="btn-code" id="checkPass-next">
-                    다음
+                    비밀번호 찾기
                 </button>
             </div>
         </div>
