--- a/Spring/Photostagram/src/main/resources/static/css/chat.css
+++ b/Spring/Photostagram/src/main/resources/static/css/chat.css
@@ -220,7 +220,7 @@ li > img{
 input[type='checkbox']{
     display:none;
 }
-input[type='checkbox']+label{
+label{
     display:inline-block;
     width:18px;
     height:18px;
@@ -228,6 +228,7 @@ input[type='checkbox']+label{
     border: 1px solid #292929;
     position: relative;
 }
+/*
 input[id="userCheck"]:checked + label::after{
         content:'✔';
         font-size: 15px;
@@ -235,9 +236,8 @@ input[id="userCheck"]:checked + label::after{
         height: 18px;
         text-align: center;
         position: absolute;
-        left: 0;
-        top:0;
-      }
+
+      }*/
 /* 모달 받는 사람 검색창 */
 .new-body1{
     align-items: stretch;
