--- a/Spring/Photostagram/src/main/resources/templates/board/post.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/post.html
@@ -23,7 +23,7 @@
                     <li>
                         <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
                         <div class="reply">
-                            <h1><span>[[${user.username}]]</span>댓글 내용12312321321321312321312321321321321321321321211111111111111111111111111111111111111111111113</h1>
+                            <h1><span>[[${user.username}]]</span>[[${post.content}]]</h1>
                             <a href="#">#해시태그</a>
                             <div>
                                 5주 &nbsp;&nbsp;
