--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -122,7 +122,7 @@
               <div class="trans_inner">
                 <div>
                   <!------------- 게시글 사진입니다 --------------------->
-                  <img th:src="|@{/}thumb/${article.imageVO.thumb}" alt="visual01" />
+<!--                  <img th:src="|@{/}thumb/${article.imageVO.thumb}" alt="visual01" />-->
                 </div>
               </div>
             </div>
