--- a/Spring/Photostagram/src/main/resources/static/css/chat.css
+++ b/Spring/Photostagram/src/main/resources/static/css/chat.css
@@ -217,27 +217,53 @@ li > img{
     font-size: 15px;
 }
 
-input[type='checkbox']{
-    display:none;
-}
-label{
-    display:inline-block;
-    width:18px;
-    height:18px;
-    border-radius: 10px;
-    border: 1px solid #292929;
+input[type='checkbox'] {
     position: relative;
+    width: 1.5em;
+    height: 1.5em;
+  color: #272727;
+  border: 1px solid #bdc1c6;
+  border-radius: 10px;
+  appearance: none;
+  outline: 0;
+  cursor: pointer;
+  transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1);
 }
-/*
-input[id="userCheck"]:checked + label::after{
-        content:'✔';
-        font-size: 15px;
-        width: 18px;
-        height: 18px;
-        text-align: center;
-        position: absolute;
 
-      }*/
+input[type='checkbox']::before {
+    position: absolute;
+    content: '';
+    display: block;
+    top: 0;
+    left: 5px;
+    width: 8px;
+    height: 14px;
+    border-style: solid;
+    border-color: #fff;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    opacity: 0;
+}
+
+input[type='checkbox']:checked {
+    color: #fff;
+    border-color: #0095f6;
+    background: #0095f6;
+}
+
+input[type='checkbox']:checked::before {
+    opacity: 1;
+}
+
+.sendingUser{
+    width:380px;
+    height: 100%;
+}
+
+.sendingUser > h5{
+    float: left;
+}
+
 /* 모달 받는 사람 검색창 */
 .new-body1{
     align-items: stretch;
