--- a/Spring/Photostagram/src/main/resources/templates/board/post.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/post.html
@@ -24,7 +24,9 @@
                         <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
                         <div class="reply">
                             <h1><span>[[${user.username}]]</span>[[${post.content}]]</h1>
-                            <a href="#">#해시태그</a>
+                            <th:block th:each="hash:${hashes}">
+                                <a href="#">#[[${hash.hashtag}]]</a>
+                            </th:block>
                             <div>
                                 5주 &nbsp;&nbsp;
                                 좋아요 <span>100</span>개 &nbsp;&nbsp;
@@ -39,7 +41,9 @@
                                     <li>
                                         <img class="proImg" th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}" alt="profile">
                                         <div class="reply">
-                                            <h1><span>gildong</span>댓글 내용111111111111111111111111111111111111111111111111111111</h1>
+                                            <th:block th:each="comment:${comments}">
+                                            <h1><span>gildong</span>[[${comment.comment}]]</h1>
+                                            </th:block>
                                             <a href="#">#해시태그</a>
                                             <div>
                                                 5주 &nbsp;&nbsp;
