2023/03/16 로그인 기능 구현 중

--- a/Spring/Photostagram/src/main/resources/templates/member/login.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/login.html
@@ -42,9 +42,15 @@
                                         <button type="button" class="passView">비밀번호 표시</button>
                                     </div>
                                 </div>
+                                <div id="remember">
+                                    <label for="rememberMe">로그인 상태 유지</label>
+                                    <input type="checkbox" name="remember-me" id="rememberMe">
+                                </div>
+                                <!--
                                 <div class="checking">
                                     <div>존재하지 않는 회원입니다.</div>
                                 </div>
+                                -->
                                 <div class="btn-group">
                                     <button type="submit" class="btn-login" id="signin-btn" disabled>
                                         로그인
