--- a/Spring/Photostagram/src/main/resources/templates/member/resultPass.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/resultPass.html
@@ -9,8 +9,8 @@
                                 <p>비밀번호 찾기</p>
                             </div>
                             <div class="guide">
-                                <span>홍길동</span> 회원님, 임시 비밀번호를 고객님의 이메일 <br>
-                                <span>kimwoo***@naver.com</span>로 전송하였습니다. <br> <br>
+                                <span id="resultName">홍길동</span> 회원님, 임시 비밀번호를 고객님의 이메일 <br>
+                                <span id="resultEmail">kimwoo***@naver.com</span>로 전송하였습니다. <br> <br>
                                 다시 로그인하여 주시기바랍니다.
                             </div>
                             <div class="search">
