--- a/Spring/Photostagram/src/main/resources/static/css/member.css
+++ b/Spring/Photostagram/src/main/resources/static/css/member.css
@@ -580,7 +580,7 @@ option {
 .result-txt.on {
     display: block;
 }
-
+/* 아이디 비밀번호 찾기 유효성 검사 */
 .check-txt {
     display: none;
 }
@@ -598,4 +598,19 @@ option {
 }
 .emailDiv.on {
     display: none;
+}
+
+/* 로그인 상태 유지 */
+#remember {
+    margin-left: 41px;
+    margin-top: 11px;
+}
+#remember > label {
+    position: relative;
+    color: #8e8e8e;
+    font-size: 12px;
+}
+#rememberMe {
+    position: relative;
+    top: 2px;
 }
