--- a/Spring/Photostagram/src/main/resources/templates/member/checkPass.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/checkPass.html
@@ -20,14 +20,6 @@
             <div class="form-group">
                 <div class="animate-input">
                     <span class="in-out">
-                        성명 입력
-                    </span>
-                    <input type="text" name="name">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="animate-input">
-                    <span class="in-out">
                         이메일 입력
                     </span>
                     <input type="text" name="email">
@@ -38,13 +30,11 @@
                 <div class="check-txt nId">아이디를 입력하여주세요.</div>
                 <div class="check-txt id">아이디 형식이 올바르지않습니다.</div>
                 <div class="check-txt email">이메일 형식이 올바르지않습니다.</div>
-                <div class="check-txt name">이름 형식이 올바르지않습니다.</div>
-                <div class="check-txt nName">이름을 입력하여주세요.</div>
                 <div class="check-txt nEmail">이메일을 입력하여주세요.</div>
             </div>
             <div class="code">
                 <button type="submit" class="btn-code" id="checkPass-next">
-                    비밀번호 찾기
+                    코드 보내기
                 </button>
             </div>
         </div>
